argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal-go/cbioportal-go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-ingress-class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-ipblock@kubernetescrd,default-ratelimit-host@kubernetescrd
  labels:
    app.kubernetes.io/instance: cbioportal-go
  name: cbioportal-go-ingress
  namespace: default
spec:
  rules:
    - host: go.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-go
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - go.cbioportal.org
      secretName: go-cbioportal-cert
